# nxtend-event-manager-bot

./: Makefile  compose.dev.yml  pyproject.toml
discord/: Makefile  bot.py
discord/cogs/: CreateLoginToken.py
discord/config/: bot_config.py
