[tool.poetry]
name = "nxtend-event-manager-bot"
version = "0.1.0"
description = "A discord bot for managing events."
authors = ["Yuki Watanabe <ukwhatn@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.discord]
optional = true
[tool.poetry.group.discord.dependencies]
sentry-sdk = "2.13.0"
py-cord = "2.6.0"
httpx = "^0.27.2"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"